Убрал атрибут alt у <svg>

--- a/catalog.html
+++ b/catalog.html
@@ -97,7 +97,7 @@
           <li class="sort-order-up">
             <!--<a href="#"><img src="img/icon-up-dir.svg" alt="Сортировка по возрастанию"></a>-->
             <a href="#">
-              <svg height="10" width="11" xmlns="http://www.w3.org/2000/svg" alt="Сортировка по возрастанию">
+              <svg height="10" width="11" xmlns="http://www.w3.org/2000/svg">
                 <title>Сортировка по возрастанию</title>
                 <path d="M5.5 0L0 10h11z" fill="#cacaca"/>
               </svg>
@@ -106,7 +106,7 @@
           <li class="sort-order-down">
             <!--<a class="sort-order-selected" href="#"><img src="img/icon-down-dir.svg" alt="Сортировка по убыванию"></a>-->
             <a class="sort-order-selected" href="#">
-              <svg height="10" width="11" xmlns="http://www.w3.org/2000/svg" alt="Сортировка по убыванию">
+              <svg height="10" width="11" xmlns="http://www.w3.org/2000/svg">
                 <title>Сортировка по убыванию</title>
                 <path d="M5.5 10L0 0h11" fill="#cacaca"/>
               </svg>
