Убраны лишние свойства в CSS

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
       <div class="main-background">
       </div>
       <div class="lead-wrapper">
-        <p class="container-lead">Седона&nbsp;&mdash; небольшой городок в&nbsp;Аризоне, заслуживающий большего!</p>
-        <p class="container-advantages">Рассмотрим 5&nbsp;причин, по&nbsp;которым Седона круче, чем гранд каньон!</p>
+        <p class="container-lead paragraph-style-reset">Седона&nbsp;&mdash; небольшой городок в&nbsp;Аризоне, заслуживающий большего!</p>
+        <p class="container-advantages paragraph-style-reset">Рассмотрим 5&nbsp;причин, по&nbsp;которым Седона круче, чем гранд каньон!</p>
       </div>
       <h2 class="visually-hidden">Преимущества Седоны</h2>
       <ul class="advantages-list list-style">
@@ -43,23 +43,23 @@
           <div class="main-advantages-wrapper">
             <h3 class="main-advantage-1">Настоящий городок</h3>
             <span>&#8470;&nbsp;1</span>
-            <p class="main-advantage-1-info advantage-info">Седона&nbsp;&mdash; не&nbsp;аттракцион для туристов, там течёт своя жизнь</p>
+            <p class="main-advantage-1-info advantage-info paragraph-style-reset">Седона&nbsp;&mdash; не&nbsp;аттракцион для туристов, там течёт своя жизнь</p>
           </div>
-          <p class="main-advantages-image"><img src="img/city.jpg" alt="Фотография города"></p>
+          <p class="main-advantages-image paragraph-style-reset"><img src="img/city.jpg" alt="Фотография города"></p>
         </li>
         <li>
           <ul class="list-style sub-main-advantages">
             <li>
               <h3 class="housing">Жильё</h3>
-              <p class="sub-advantage-1 advantage-info">Рекомендуем пожить в&nbsp;настоящем мотеле, всё как в&nbsp;кино!</p>
+              <p class="sub-advantage-1 advantage-info paragraph-style-reset">Рекомендуем пожить в&nbsp;настоящем мотеле, всё как в&nbsp;кино!</p>
             </li>
             <li>
               <h3 class="food">Еда</h3>
-              <p class="sub-advantage-2 advantage-info">Всегда заказывайте фирменный бургер, вы&nbsp;не&nbsp;разочаруетесь!</p>
+              <p class="sub-advantage-2 advantage-info paragraph-style-reset">Всегда заказывайте фирменный бургер, вы&nbsp;не&nbsp;разочаруетесь!</p>
             </li>
             <li>
               <h3 class="souvenirs">Сувениры</h3>
-              <p class="sub-advantage-3 advantage-info">Не&nbsp;только китайского, но&nbsp;и&nbsp;местного производства!</p>
+              <p class="sub-advantage-3 advantage-info paragraph-style-reset">Не&nbsp;только китайского, но&nbsp;и&nbsp;местного производства!</p>
             </li>
           </ul>
         </li>
@@ -67,38 +67,38 @@
           <div class="main-advantages-wrapper">
             <h3 class="main-advantage-2">Там есть мост дьявола</h3>
             <span>&#8470;&nbsp;2</span>
-            <p class="main-advantage-2-info advantage-info">Да, по&nbsp;нему можно пройти! Если конечно вы&nbsp;осмелитесь</p>
+            <p class="main-advantage-2-info advantage-info paragraph-style-reset">Да, по&nbsp;нему можно пройти! Если конечно вы&nbsp;осмелитесь</p>
           </div>
-          <p class="main-advantages-image"><img src="img/bridge.jpg" alt="Фотография моста дьявола"></p>
+          <p class="main-advantages-image paragraph-style-reset"><img src="img/bridge.jpg" alt="Фотография моста дьявола"></p>
         </li>
         <li class="secondary-advantages">
           <h3>Небольшая площадь</h3>
           <span>&#8470;&nbsp;3</span>
-          <p class="secondary-advantage-1 advantage-info">Все достопримечательности находятся очень близко</p>
+          <p class="secondary-advantage-1 advantage-info paragraph-style-reset">Все достопримечательности находятся очень близко</p>
         </li>
         <li class="secondary-advantages">
           <h3>Красивая дорога</h3>
           <span>&#8470;&nbsp;4</span>
-          <p class="secondary-advantage-2 advantage-info">Ехать в&nbsp;Седону из&nbsp;Лас-Вегаса совсем не&nbsp;скучно!</p>
+          <p class="secondary-advantage-2 advantage-info paragraph-style-reset">Ехать в&nbsp;Седону из&nbsp;Лас-Вегаса совсем не&nbsp;скучно!</p>
         </li>
         <li class="secondary-advantages">
           <h3>Мало туристов</h3>
           <span>&#8470;&nbsp;5</span>
-          <p class="secondary-advantage-3 advantage-info">Большинство едет в&nbsp;гранд каньон и&nbsp;толпится там</p>
+          <p class="secondary-advantage-3 advantage-info paragraph-style-reset">Большинство едет в&nbsp;гранд каньон и&nbsp;толпится там</p>
         </li>
       </ul>
       <div class="interest-wrapper">
         <h2 class="interest">Заинтересовались?</h2>
-        <p class="interest-info">Укажите предполагаемые даты поездки,<br> и&nbsp;мы&nbsp;покажем вам лучшие предложения гостиниц в&nbsp;седоне</p>
+        <p class="interest-info paragraph-style-reset">Укажите предполагаемые даты поездки,<br> и&nbsp;мы&nbsp;покажем вам лучшие предложения гостиниц в&nbsp;седоне</p>
       </div>
       <section class="modal">
         <button class="button-modal button-brown button">Поиск гостиницы в&nbsp;Седоне</button>
         <h3 class="visually-hidden">Форма поиска гостиницы</h3>
         <form class="book-form" action="https://echo.htmlacademy.ru" method="post">
           <div class="date-container">
-            <p>
+            <p class="paragraph-style-reset">
               <label for="book-arrival">Дата заезда:</label>
-              <input class="book-date book-arrival-pos" id="book-arrival" type="text" name="arrival-date" placeholder="&nbsp;&nbsp;24 апреля 2017">
+              <input class="book-date book-arrival-pos" id="book-arrival" type="text" name="arrival-date" placeholder="&nbsp;&nbsp;24 апреля 2017" autocomplete="off">
               <svg class="calendar" fill="#cacaca" enable-background="new 0 0 21 22" height="22" viewBox="0 0 21 22" width="21" xmlns="http://www.w3.org/2000/svg">
                 <path d="m19.251 2.025h-2.845v-1.377c0-.381-.294-.689-.656-.689-.363 0-.656.308-.656.689v1.377h-3.938v-1.377c0-.381-.294-.689-.655-.689-.363 0-.657.308-.657.689v1.377h-3.938v-1.377c0-.381-.294-.689-.656-.689-.363 0-.657.308-.657.689v1.377h-2.843c-.966 0-1.75.822-1.75 1.837v16.302c0 1.015.784 1.836 1.75 1.836h17.501c.966 0 1.749-.821 1.749-1.836v-16.302c0-1.015-.783-1.837-1.749-1.837zm.437 18.139c0 .253-.195.459-.437.459h-17.501c-.241 0-.438-.206-.438-.459v-16.302c0-.253.196-.459.438-.459h2.844v1.378c0 .381.294.689.657.689.362 0 .656-.308.656-.689v-1.378h3.938v1.378c0 .381.294.689.657.689.361 0 .655-.308.655-.689v-1.378h3.938v1.378c0 .381.293.689.656.689.362 0 .656-.308.656-.689v-1.378h2.845c.241 0 .437.206.437.459v16.302z"/>
                 <path d="m4.594 8.225h2.625v2.066h-2.625z"/>
@@ -112,9 +112,9 @@
                 <path d="m13.781 8.225h2.625v2.066h-2.625z"/>
               </svg>
             </p>
-            <p>
+            <p class="paragraph-style-reset">
               <label for="book-departure">Дата выезда:</label>
-              <input class="book-date book-departure-pos" id="book-departure" type="text" name="departure-date" placeholder="&nbsp;&nbsp;4 июля 2017">
+              <input class="book-date book-departure-pos" id="book-departure" type="text" name="departure-date" placeholder="&nbsp;&nbsp;4 июля 2017" autocomplete="off">
               <svg class="calendar" fill="#cacaca" enable-background="new 0 0 21 22" height="22" viewBox="0 0 21 22" width="21" xmlns="http://www.w3.org/2000/svg">
                 <path d="m19.251 2.025h-2.845v-1.377c0-.381-.294-.689-.656-.689-.363 0-.656.308-.656.689v1.377h-3.938v-1.377c0-.381-.294-.689-.655-.689-.363 0-.657.308-.657.689v1.377h-3.938v-1.377c0-.381-.294-.689-.656-.689-.363 0-.657.308-.657.689v1.377h-2.843c-.966 0-1.75.822-1.75 1.837v16.302c0 1.015.784 1.836 1.75 1.836h17.501c.966 0 1.749-.821 1.749-1.836v-16.302c0-1.015-.783-1.837-1.749-1.837zm.437 18.139c0 .253-.195.459-.437.459h-17.501c-.241 0-.438-.206-.438-.459v-16.302c0-.253.196-.459.438-.459h2.844v1.378c0 .381.294.689.657.689.362 0 .656-.308.656-.689v-1.378h3.938v1.378c0 .381.294.689.657.689.361 0 .655-.308.655-.689v-1.378h3.938v1.378c0 .381.293.689.656.689.362 0 .656-.308.656-.689v-1.378h2.845c.241 0 .437.206.437.459v16.302z"/>
                 <path d="m4.594 8.225h2.625v2.066h-2.625z"/>
@@ -129,11 +129,11 @@
               </svg>
             </p>
           </div>
-          <p class="children-container">
+          <p class="children-container paragraph-style-reset">
             <label for="book-adults-num">Взрослые:</label>
-            <input class="book-date container-children" id="book-adults-num" type="text" name="adults-num" placeholder= "2">
+            <input class="book-date container-children" id="book-adults-num" type="text" name="adults-num" placeholder= "2" autocomplete="off">
             <label class="children-num-pos" for="book-children-num">Дети:</label>
-            <input class="book-date container-children container-children-pos" id="book-children-num" type="text" name= "children-num" placeholder="0">
+            <input class="book-date container-children container-children-pos" id="book-children-num" type="text" name= "children-num" placeholder="0" autocomplete="off">
           </p>
           <div class="button-find-wrapper">
             <button class="button-modal button-blue button" type="submit">Найти</button>
@@ -155,7 +155,7 @@
           <a class="social-youtube social-button button-blue" href="#"><span class="visually-hidden">Youtube</span></a>
         </li>
       </ul>
-      <p class="footer-copyright">
+      <p class="footer-copyright paragraph-style-reset">
         Website&nbsp;by
         <a class="copyright-logo-container" href="https://htmlacademy.ru/intensive/htmlcss">
           <span class="footer-copyright-description">HTML Academy</span>
