--- a/catalog.html
+++ b/catalog.html
@@ -37,15 +37,15 @@
           <legend class="filter-header">Инфраструктура:</legend>
           <ul class="list-style options-list">
             <li>
-              <input id="filter-pool" type="checkbox" name="pool" checked>
+              <input id="filter-pool" type="checkbox" name="pool" checked autocomplete="off">
               <label for="filter-pool">Бассейн</label>
             </li>
             <li>
-              <input id="filter-parking" type="checkbox" name="parking">
+              <input id="filter-parking" type="checkbox" name="parking" autocomplete="off">
               <label for="filter-parking">Парковка</label>
             </li>
             <li>
-              <input id="filter-wi-fi" type="checkbox" name="wi-fi">
+              <input id="filter-wi-fi" type="checkbox" name="wi-fi" autocomplete="off">
               <label for="filter-wi-fi">Wi-Fi</label>
             </li>
           </ul>
@@ -54,15 +54,15 @@
           <legend class="filter-header">Тип жилья:</legend>
           <ul class="list-style options-list">
             <li>
-              <input id="filter-hotel" type="checkbox" name="hotel" checked>
+              <input id="filter-hotel" type="checkbox" name="hotel" checked autocomplete="off">
               <label for="filter-hotel">Гостиница</label>
             </li>
             <li>
-              <input id="filter-motel" type="checkbox" name="motel" checked>
+              <input id="filter-motel" type="checkbox" name="motel" checked autocomplete="off">
               <label for="filter-motel">Мотель</label>
             </li>
             <li>
-              <input id="filter-apartments" type="checkbox" name="apartments" checked>
+              <input id="filter-apartments" type="checkbox" name="apartments" checked autocomplete="off">
               <label for="filter-apartments">Апартаменты</label>
             </li>
           </ul>
@@ -80,8 +80,8 @@
       </form>
       <section class="search-result">
         <h2 class="visually-hidden">Сортировка результатов поиска</h2>
-        <p class="search-found">Найдено: 3</p>
-        <p class="search-sort">Сортировка:</p>
+        <p class="search-found paragraph-style-reset">Найдено: 3</p>
+        <p class="search-sort paragraph-style-reset">Сортировка:</p>
         <ul class="list-style sort-type">
           <li class="sort-selected">
             <a href="#">По&nbsp;цене</a>
@@ -95,7 +95,6 @@
         </ul>
         <ul class="list-style sort-order">
           <li class="sort-order-up">
-            <!--<a href="#"><img src="img/icon-up-dir.svg" alt="Сортировка по возрастанию"></a>-->
             <a href="#">
               <svg height="10" width="11" xmlns="http://www.w3.org/2000/svg">
                 <title>Сортировка по возрастанию</title>
@@ -104,7 +103,6 @@
             </a>
           </li>
           <li class="sort-order-down">
-            <!--<a class="sort-order-selected" href="#"><img src="img/icon-down-dir.svg" alt="Сортировка по убыванию"></a>-->
             <a class="sort-order-selected" href="#">
               <svg height="10" width="11" xmlns="http://www.w3.org/2000/svg">
                 <title>Сортировка по убыванию</title>
@@ -119,7 +117,7 @@
         <ul class="list-style catalog-list">
           <li class="catalog-item">
             <article class="catalog-item-info">
-              <p class="catalog-item-image">
+              <p class="catalog-item-image paragraph-style-reset">
                 <a class="item-image" href="#">
                   <img src="img/item-1.jpg" width="135" height="90" alt="Amara Resort & Spa">
                 </a>
@@ -138,21 +136,7 @@
                 </div>
               </div>
               <div class="rating-wrapper">
-                <!--<ul class="list-style star-rating-list">
-                  <li>
-                    <img width="18" height="17" src="img/star.svg" alt="Рейтинг жилья 4 из 5">
-                  </li>
-                  <li>
-                    <img width="18" height="17"  src="img/star.svg">
-                  </li>
-                  <li>
-                    <img width="18" height="17"  src="img/star.svg">
-                  </li>
-                  <li>
-                    <img width="18" height="17"  src="img/star.svg">
-                  </li>
-                </ul>-->
-                <p class="star-rating">
+                <p class="star-rating paragraph-style-reset">
                   <img width="18" height="17" src="img/star.svg" alt="Рейтинг жилья 4 из 5">
                   <img width="18" height="17" src="img/star.svg">
                   <img width="18" height="17" src="img/star.svg">
@@ -164,7 +148,7 @@
           </li>
           <li class="catalog-item">
             <article class="catalog-item-info">
-              <p class="catalog-item-image">
+              <p class="catalog-item-image paragraph-style-reset">
                 <a href="#">
                   <img src="img/item-2.jpg" width="135" height="90"  alt="Desert Quail Inn">
                 </a>
@@ -183,18 +167,7 @@
                 </div>
               </div>
               <div class="rating-wrapper">
-                <!--<ul class="list-style star-rating-list">
-                  <li>
-                    <img width="18" height="17"  src="img/star.svg" alt="Рейтинг жилья 3 из 5">
-                  </li>
-                  <li>
-                    <img width="18" height="17"  src="img/star.svg">
-                  </li>
-                  <li>
-                    <img width="18" height="17"  src="img/star.svg">
-                  </li>
-                </ul>-->
-                <p class="star-rating">
+                <p class="star-rating paragraph-style-reset">
                   <img width="18" height="17" src="img/star.svg" alt="Рейтинг жилья 3 из 5">
                   <img width="18" height="17" src="img/star.svg">
                   <img width="18" height="17" src="img/star.svg">
@@ -205,7 +178,7 @@
           </li>
           <li class="catalog-item">
             <article class="catalog-item-info">
-              <p class="catalog-item-image">
+              <p class="catalog-item-image paragraph-style-reset">
                 <a href="#">
                   <img src="img/item-3.jpg" width="135" height="90"  alt="Villas at Poco Diablo">
                 </a>
@@ -224,15 +197,7 @@
                 </div>
               </div>
               <div class="rating-wrapper">
-                <!--<ul class="list-style star-rating-list">
-                  <li>
-                    <img width="18" height="17"  src="img/star.svg" alt="Рейтинг жилья 2 из 5">
-                  </li>
-                  <li>
-                    <img width="18" height="17"  src="img/star.svg">
-                  </li>
-                </ul>-->
-                <p class="star-rating">
+                <p class="star-rating paragraph-style-reset">
                   <img width="18" height="17" src="img/star.svg" alt="Рейтинг жилья 2 из 5">
                   <img width="18" height="17" src="img/star.svg">
                 </p>
@@ -256,7 +221,7 @@
           <a class="social-youtube social-button button-blue" href="#"><span class="visually-hidden">Youtube</span></a>
         </li>
       </ul>
-      <p class="footer-copyright">
+      <p class="footer-copyright paragraph-style-reset">
         Website&nbsp;by
         <a class="copyright-logo-container" href="https://htmlacademy.ru/intensive/htmlcss">
           <span class="footer-copyright-description">HTML Academy</span>
