--- a/catalog.html
+++ b/catalog.html
@@ -67,16 +67,21 @@
             </li>
           </ul>
         </fieldset>
-        <!-- Фильтр по стоимости в сутки
-        <fieldset>
-          <legend>Стоимость в&nbsp;сутки (Р):</legend>
-          <label for="filter-slider-min">От</label>
-          <input id="filter-slider-min" type="text" name="slider-min" placeholder="0">
-          <label for="filter-slider-max">До</label>
-          <input id="filter-slider-max" type="text" name="slider-max" placeholder="3000">
-        </fieldset>
-        -->
-        <button type="submit">Показать</button>
+        <div class="filter-range">
+          <div class="filter-range-title">Стоимость в сутки (р):</div>
+          <div class="price-controls">
+            <label class="min-price">от <input type="text" name="min-price" value="0"></label>
+            <label class="max-price">до <input type="text" name="max-price" value="3000"></label>
+          </div>
+          <div class="range-controls">
+            <div class="scale">
+              <div class="bar"></div>
+            </div>
+            <div class="range-toggle range-toggle-min"></div>
+            <div class="range-toggle range-toggle-max"></div>
+          </div>
+          <button class="btn-transparent" type="submit">Показать</button>
+        </div>
       </form>
       <section class="search-result">
         <h2 class="visually-hidden">Сортировка результатов поиска</h2>
