Доступность кнопок плюс и минус

--- a/index.html
+++ b/index.html
@@ -133,17 +133,17 @@
             <p class="adult-wrapper paragraph-style-reset">
               <label class="adult-label-wrapper" for="book-adults-num">Взрослые:</label>
               <!--<a class="plus" href="#"><span class="visually-hidden">Плюс</span></a>-->
-              <button class="minus" type="button"></button>
+              <button class="minus" type="button"><span class="visually-hidden">Уменьшить</span></button>
               <input class="book-date container-children" id="book-adults-num" type="text" name="adults-num" placeholder= "2" autocomplete="off">
-              <button class="plus" type="button"></button>
+              <button class="plus" type="button"><span class="visually-hidden">Увеличить</span></button>
               <!--<a class="minus" href="#"><span class="visually-hidden">Минус</span></a>-->
             </p>
             <p class="children-wrapper paragraph-style-reset">
               <label class="children-num-pos" for="book-children-num">Дети:</label>
               <!--<a class="plus" href="#"><span class="visually-hidden">Плюс</span></a>-->
-              <button class="minus" type="button"></button>
+              <button class="minus" type="button"><span class="visually-hidden">Уменьшить</span></button>
               <input class="book-date container-children container-children-pos" id="book-children-num" type="text" name= "children-num" placeholder="0" autocomplete="off">
-              <button class="plus" type="button"></button>
+              <button class="plus" type="button"><span class="visually-hidden">Увеличить</span></button>
               <!--<a class="minus" href="#"><span class="visually-hidden">Минус</span></a>-->
             </p>
           </div>
