--- a/index.html
+++ b/index.html
@@ -40,48 +40,48 @@
       <h2 class="visually-hidden">Преимущества Седоны</h2>
       <ul class="advantages-list list-style">
         <li class="main-advantages">
-          <div class="main-advantages-wrapper">
+          <div class="main-advantages-wrapper advantages-wrapper-1">
             <h3 class="main-advantage-1">Настоящий городок</h3>
             <span>&#8470;&nbsp;1</span>
             <p class="main-advantage-1-info advantage-info paragraph-style-reset">Седона&nbsp;&mdash; не&nbsp;аттракцион для туристов, там течёт своя жизнь</p>
           </div>
-          <p class="main-advantages-image paragraph-style-reset"><img src="img/city.jpg" alt="Фотография города"></p>
+          <p class="main-advantages-image paragraph-style-reset"><img src="img/city.jpg" width="800" height="256" alt="Фотография города"></p>
         </li>
         <li>
           <ul class="list-style sub-main-advantages">
-            <li>
+            <li class="first-point">
               <h3 class="housing">Жильё</h3>
               <p class="sub-advantage-1 advantage-info paragraph-style-reset">Рекомендуем пожить в&nbsp;настоящем мотеле, всё как в&nbsp;кино!</p>
             </li>
-            <li>
+            <li class="second-point">
               <h3 class="food">Еда</h3>
               <p class="sub-advantage-2 advantage-info paragraph-style-reset">Всегда заказывайте фирменный бургер, вы&nbsp;не&nbsp;разочаруетесь!</p>
             </li>
-            <li>
+            <li class="third-point">
               <h3 class="souvenirs">Сувениры</h3>
               <p class="sub-advantage-3 advantage-info paragraph-style-reset">Не&nbsp;только китайского, но&nbsp;и&nbsp;местного производства!</p>
             </li>
           </ul>
         </li>
         <li class="main-advantages">
-          <div class="main-advantages-wrapper">
-            <h3 class="main-advantage-2">Там есть мост дьявола</h3>
+          <div class="main-advantages-wrapper advantages-wrapper-2">
+            <h3 class="main-advantage-2">Там есть&nbsp; мост дьявола</h3>
             <span>&#8470;&nbsp;2</span>
             <p class="main-advantage-2-info advantage-info paragraph-style-reset">Да, по&nbsp;нему можно пройти! Если конечно вы&nbsp;осмелитесь</p>
           </div>
-          <p class="main-advantages-image paragraph-style-reset"><img src="img/bridge.jpg" alt="Фотография моста дьявола"></p>
+          <p class="main-advantages-image paragraph-style-reset"><img src="img/bridge.jpg" width="800" height="256" alt="Фотография моста дьявола"></p>
         </li>
-        <li class="secondary-advantages">
+        <li class="secondary-advantages sub-first-point">
           <h3>Небольшая площадь</h3>
           <span>&#8470;&nbsp;3</span>
           <p class="secondary-advantage-1 advantage-info paragraph-style-reset">Все достопримечательности находятся очень близко</p>
         </li>
-        <li class="secondary-advantages">
+        <li class="secondary-advantages sub-second-point">
           <h3>Красивая дорога</h3>
           <span>&#8470;&nbsp;4</span>
           <p class="secondary-advantage-2 advantage-info paragraph-style-reset">Ехать в&nbsp;Седону из&nbsp;Лас-Вегаса совсем не&nbsp;скучно!</p>
         </li>
-        <li class="secondary-advantages">
+        <li class="secondary-advantages sub-third-point">
           <h3>Мало туристов</h3>
           <span>&#8470;&nbsp;5</span>
           <p class="secondary-advantage-3 advantage-info paragraph-style-reset">Большинство едет в&nbsp;гранд каньон и&nbsp;толпится там</p>
