--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <header class="main-header container">
+    <header class="container">
       <nav class="main-navigation">
         <a class="main-header-logo">
           <h1 class="visually-hidden">Добро пожаловать в Седону</h1>
@@ -21,7 +21,7 @@
           <li class="site-navigation-item-left">
             <a class="link-style" href="#">Фото и&nbsp;видео</a>
           </li>
-          <li class="site-navigation-item-right site-navigation-map">
+          <li class="site-navigation-item-right">
             <a class="link-style" href="#">Карта штата</a>
           </li>
           <li class="site-navigation-item-right">
@@ -95,56 +95,50 @@
         <button class="button-modal button-brown button">Поиск гостиницы в&nbsp;Седоне</button>
         <h3 class="visually-hidden">Форма поиска гостиницы</h3>
         <form class="book-form" action="https://echo.htmlacademy.ru" method="post">
-          <div class="date-input-wrapper">
-            <p class="form-header-container paragraph-style-reset">
-              <label for="book-arrival">Дата заезда:</label>
-              <label for="book-departure">Дата выезда:</label>
-            </p>
-            <p class="form-input-container paragraph-style-reset">
-              <input class="book-date book-arrival-pos" id="book-arrival" type="text" name="arrival-date" placeholder="24 апреля 2017" autocomplete="off">
-              <svg class="calendar calendar-pos-1" fill="#cacaca" enable-background="new 0 0 21 22" height="22" viewBox="0 0 21 22" width="21" xmlns="http://www.w3.org/2000/svg">
-                <path d="m19.251 2.025h-2.845v-1.377c0-.381-.294-.689-.656-.689-.363 0-.656.308-.656.689v1.377h-3.938v-1.377c0-.381-.294-.689-.655-.689-.363 0-.657.308-.657.689v1.377h-3.938v-1.377c0-.381-.294-.689-.656-.689-.363 0-.657.308-.657.689v1.377h-2.843c-.966 0-1.75.822-1.75 1.837v16.302c0 1.015.784 1.836 1.75 1.836h17.501c.966 0 1.749-.821 1.749-1.836v-16.302c0-1.015-.783-1.837-1.749-1.837zm.437 18.139c0 .253-.195.459-.437.459h-17.501c-.241 0-.438-.206-.438-.459v-16.302c0-.253.196-.459.438-.459h2.844v1.378c0 .381.294.689.657.689.362 0 .656-.308.656-.689v-1.378h3.938v1.378c0 .381.294.689.657.689.361 0 .655-.308.655-.689v-1.378h3.938v1.378c0 .381.293.689.656.689.362 0 .656-.308.656-.689v-1.378h2.845c.241 0 .437.206.437.459v16.302z"/>
-                <path d="m4.594 8.225h2.625v2.066h-2.625z"/>
-                <path d="m4.594 11.668h2.625v2.067h-2.625z"/>
-                <path d="m4.594 15.112h2.625v2.066h-2.625z"/>
-                <path d="m9.188 15.112h2.625v2.066h-2.625z"/>
-                <path d="m9.188 11.668h2.625v2.067h-2.625z"/>
-                <path d="m9.188 8.225h2.625v2.066h-2.625z"/>
-                <path d="m13.781 15.112h2.625v2.066h-2.625z"/>
-                <path d="m13.781 11.668h2.625v2.067h-2.625z"/>
-                <path d="m13.781 8.225h2.625v2.066h-2.625z"/>
-              </svg>
-              <input class="book-date book-departure-pos" id="book-departure" type="text" name="departure-date" placeholder="4 июля 2017" autocomplete="off">
-                <svg class="calendar calendar-pos-2" fill="#cacaca" enable-background="new 0 0 21 22" height="22" viewBox="0 0 21 22" width="21" xmlns="http://www.w3.org/2000/svg">
-                  <path d="m19.251 2.025h-2.845v-1.377c0-.381-.294-.689-.656-.689-.363 0-.656.308-.656.689v1.377h-3.938v-1.377c0-.381-.294-.689-.655-.689-.363 0-.657.308-.657.689v1.377h-3.938v-1.377c0-.381-.294-.689-.656-.689-.363 0-.657.308-.657.689v1.377h-2.843c-.966 0-1.75.822-1.75 1.837v16.302c0 1.015.784 1.836 1.75 1.836h17.501c.966 0 1.749-.821 1.749-1.836v-16.302c0-1.015-.783-1.837-1.749-1.837zm.437 18.139c0 .253-.195.459-.437.459h-17.501c-.241 0-.438-.206-.438-.459v-16.302c0-.253.196-.459.438-.459h2.844v1.378c0 .381.294.689.657.689.362 0 .656-.308.656-.689v-1.378h3.938v1.378c0 .381.294.689.657.689.361 0 .655-.308.655-.689v-1.378h3.938v1.378c0 .381.293.689.656.689.362 0 .656-.308.656-.689v-1.378h2.845c.241 0 .437.206.437.459v16.302z"/>
-                  <path d="m4.594 8.225h2.625v2.066h-2.625z"/>
-                  <path d="m4.594 11.668h2.625v2.067h-2.625z"/>
-                  <path d="m4.594 15.112h2.625v2.066h-2.625z"/>
-                  <path d="m9.188 15.112h2.625v2.066h-2.625z"/>
-                  <path d="m9.188 11.668h2.625v2.067h-2.625z"/>
-                  <path d="m9.188 8.225h2.625v2.066h-2.625z"/>
-                  <path d="m13.781 15.112h2.625v2.066h-2.625z"/>
-                  <path d="m13.781 11.668h2.625v2.067h-2.625z"/>
-                  <path d="m13.781 8.225h2.625v2.066h-2.625z"/>
-                </svg>
-            </p>
-          </div>
+          <p class="paragraph-book paragraph-style-reset">
+            <label for="book-arrival">Дата заезда:</label>
+            <input class="book-date book-arrival-pos" id="book-arrival" type="text" name="arrival-date" placeholder="24 апреля 2017" autocomplete="off">
+            <svg class="calendar" fill="#cacaca" enable-background="new 0 0 21 22" height="22" viewBox="0 0 21 22" width="21" xmlns="http://www.w3.org/2000/svg">
+              <path d="m19.251 2.025h-2.845v-1.377c0-.381-.294-.689-.656-.689-.363 0-.656.308-.656.689v1.377h-3.938v-1.377c0-.381-.294-.689-.655-.689-.363 0-.657.308-.657.689v1.377h-3.938v-1.377c0-.381-.294-.689-.656-.689-.363 0-.657.308-.657.689v1.377h-2.843c-.966 0-1.75.822-1.75 1.837v16.302c0 1.015.784 1.836 1.75 1.836h17.501c.966 0 1.749-.821 1.749-1.836v-16.302c0-1.015-.783-1.837-1.749-1.837zm.437 18.139c0 .253-.195.459-.437.459h-17.501c-.241 0-.438-.206-.438-.459v-16.302c0-.253.196-.459.438-.459h2.844v1.378c0 .381.294.689.657.689.362 0 .656-.308.656-.689v-1.378h3.938v1.378c0 .381.294.689.657.689.361 0 .655-.308.655-.689v-1.378h3.938v1.378c0 .381.293.689.656.689.362 0 .656-.308.656-.689v-1.378h2.845c.241 0 .437.206.437.459v16.302z"/>
+              <path d="m4.594 8.225h2.625v2.066h-2.625z"/>
+              <path d="m4.594 11.668h2.625v2.067h-2.625z"/>
+              <path d="m4.594 15.112h2.625v2.066h-2.625z"/>
+              <path d="m9.188 15.112h2.625v2.066h-2.625z"/>
+              <path d="m9.188 11.668h2.625v2.067h-2.625z"/>
+              <path d="m9.188 8.225h2.625v2.066h-2.625z"/>
+              <path d="m13.781 15.112h2.625v2.066h-2.625z"/>
+              <path d="m13.781 11.668h2.625v2.067h-2.625z"/>
+              <path d="m13.781 8.225h2.625v2.066h-2.625z"/>
+            </svg>
+          </p>
+          <p class="paragraph-book paragraph-style-reset">
+            <label for="book-departure">Дата выезда:</label>
+            <input class="book-date book-departure-pos" id="book-departure" type="text" name="departure-date" placeholder="4 июля 2017" autocomplete="off">
+            <svg class="calendar" fill="#cacaca" enable-background="new 0 0 21 22" height="22" viewBox="0 0 21 22" width="21" xmlns="http://www.w3.org/2000/svg">
+              <path d="m19.251 2.025h-2.845v-1.377c0-.381-.294-.689-.656-.689-.363 0-.656.308-.656.689v1.377h-3.938v-1.377c0-.381-.294-.689-.655-.689-.363 0-.657.308-.657.689v1.377h-3.938v-1.377c0-.381-.294-.689-.656-.689-.363 0-.657.308-.657.689v1.377h-2.843c-.966 0-1.75.822-1.75 1.837v16.302c0 1.015.784 1.836 1.75 1.836h17.501c.966 0 1.749-.821 1.749-1.836v-16.302c0-1.015-.783-1.837-1.749-1.837zm.437 18.139c0 .253-.195.459-.437.459h-17.501c-.241 0-.438-.206-.438-.459v-16.302c0-.253.196-.459.438-.459h2.844v1.378c0 .381.294.689.657.689.362 0 .656-.308.656-.689v-1.378h3.938v1.378c0 .381.294.689.657.689.361 0 .655-.308.655-.689v-1.378h3.938v1.378c0 .381.293.689.656.689.362 0 .656-.308.656-.689v-1.378h2.845c.241 0 .437.206.437.459v16.302z"/>
+              <path d="m4.594 8.225h2.625v2.066h-2.625z"/>
+              <path d="m4.594 11.668h2.625v2.067h-2.625z"/>
+              <path d="m4.594 15.112h2.625v2.066h-2.625z"/>
+              <path d="m9.188 15.112h2.625v2.066h-2.625z"/>
+              <path d="m9.188 11.668h2.625v2.067h-2.625z"/>
+              <path d="m9.188 8.225h2.625v2.066h-2.625z"/>
+              <path d="m13.781 15.112h2.625v2.066h-2.625z"/>
+              <path d="m13.781 11.668h2.625v2.067h-2.625z"/>
+              <path d="m13.781 8.225h2.625v2.066h-2.625z"/>
+            </svg>
+          </p>
           <div class="people-num-wrapper">
             <p class="adult-wrapper paragraph-style-reset">
               <label class="adult-label-wrapper" for="book-adults-num">Взрослые:</label>
-              <!--<a class="plus" href="#"><span class="visually-hidden">Плюс</span></a>-->
               <button class="minus" type="button"><span class="visually-hidden">Уменьшить</span></button>
               <input class="book-date container-children" id="book-adults-num" type="text" name="adults-num" placeholder= "2" autocomplete="off">
               <button class="plus" type="button"><span class="visually-hidden">Увеличить</span></button>
-              <!--<a class="minus" href="#"><span class="visually-hidden">Минус</span></a>-->
             </p>
             <p class="children-wrapper paragraph-style-reset">
               <label class="children-num-pos" for="book-children-num">Дети:</label>
-              <!--<a class="plus" href="#"><span class="visually-hidden">Плюс</span></a>-->
               <button class="minus" type="button"><span class="visually-hidden">Уменьшить</span></button>
               <input class="book-date container-children container-children-pos" id="book-children-num" type="text" name= "children-num" placeholder="0" autocomplete="off">
               <button class="plus" type="button"><span class="visually-hidden">Увеличить</span></button>
-              <!--<a class="minus" href="#"><span class="visually-hidden">Минус</span></a>-->
             </p>
           </div>
           <div class="button-find-wrapper">
@@ -154,8 +148,10 @@
       </section>
       <img class="map" src="img/map.jpg" width="1200" height="593" alt="Расположение на карте">
     </main>
-    <footer class="index-footer main-footer container">
-      <a class="social-hashtag link-style" href="#">#visitSEDONA</a>
+    <footer class="main-footer index-footer container">
+      <div class="social-hashtag-wrapper">
+        <a class="social-hashtag link-style" href="#">#visitSEDONA</a>
+      </div>
       <ul class="footer-social list-style">
         <li>
           <a class="social-twitter social-button button-blue" href="#"><span class="visually-hidden">Twitter</span></a>
@@ -170,7 +166,7 @@
       <p class="footer-copyright paragraph-style-reset">
         Website&nbsp;by
         <a class="copyright-logo-container" href="https://htmlacademy.ru/intensive/htmlcss">
-          <span class="footer-copyright-description">HTML Academy</span>
+          <span class="visually-hidden">HTML Academy</span>
           <svg width="115" height="41" viewBox="0 0 113 39" xmlns="http://www.w3.org/2000/svg">
             <g fill="#000000">
               <path d="M46.8 28.2a2 2 0 0 0 .6 0v1.3a3.4 3.4 0 0 1-1.2.2 1.8 1.8 0 0 1-1.8-1 5 5 0 0 1-3.3 1.2c-1.6 0-3-1-3-2.7 0-2.3 2-3 3.9-3a11.6 11.6 0 0 1 2.3.3v-.3c0-1-.8-1.9-2.3-1.9a7.8 7.8 0 0 0-3.2.7v-1.8a10.7 10.7 0 0 1 3.4-.6c2.4 0 4 1.2 4 3.9v3.1a.6.6 0 0 0 .6.6zM40.1 27a1.4 1.4 0 0 0 1.6 1.3 3.6 3.6 0 0 0 2.6-1v-1.5a10.2 10.2 0 0 0-2-.2c-1 0-2.2.3-2.2 1.4zM53 20.6a5.3 5.3 0 0 1 2.8.7V23a4.3 4.3 0 0 0-2.5-.7 2.9 2.9 0 1 0 0 5.7 5.3 5.3 0 0 0 2.6-.7v1.8a6.6 6.6 0 0 1-3 .6 4.4 4.4 0 0 1-4.6-4.5 4.5 4.5 0 0 1 4.8-4.7zM65.8 28.2a2 2 0 0 0 .6 0v1.3a3.4 3.4 0 0 1-1.2.2 1.8 1.8 0 0 1-1.8-1 5 5 0 0 1-3.3 1.2c-1.6 0-3-1-3-2.7 0-2.3 2-3 3.9-3a11.6 11.6 0 0 1 2.3.3v-.3c0-1-.8-1.9-2.3-1.9a7.8 7.8 0 0 0-3.2.7v-1.8a10.7 10.7 0 0 1 3.4-.6c2.4 0 4 1.2 4 3.9v3.1a.6.6 0 0 0 .6.6zM59.1 27a1.4 1.4 0 0 0 1.6 1.3 3.6 3.6 0 0 0 2.6-1v-1.5a10.2 10.2 0 0 0-2-.2c-1 0-2.2.3-2.2 1.4zM76.7 16.8v12.8h-1.8v-1.4a4 4 0 0 1-3.3 1.6 4.6 4.6 0 0 1 0-9.2 4 4 0 0 1 3.1 1.4v-5.2h2zm-4.8 5.5a2.9 2.9 0 0 0 0 5.8 3 3 0 0 0 2.8-1.8v-2.1a3 3 0 0 0-2.8-1.9zM83 20.6c3.5 0 4.7 2.8 4.1 5.4h-6.6c.3 1.5 1.8 2.2 3.4 2.2a6.4 6.4 0 0 0 2.8-.6v1.6a7.5 7.5 0 0 1-3.2.6c-2.7 0-5-1.5-5-4.6a4.4 4.4 0 0 1 4.5-4.6zm0 1.6a2.4 2.4 0 0 0-2.5 2.3h4.9a2 2 0 0 0-2.3-2.3zM89.1 29.6V21h1.7v1a4 4 0 0 1 3-1.3 3 3 0 0 1 2.7 1.4 4.3 4.3 0 0 1 3-1.4 3.2 3.2 0 0 1 3.4 3.5v5.5h-2v-5.4a1.7 1.7 0 0 0-1.8-1.8 3 3 0 0 0-2.1 1.1v6.1h-2v-5.4a1.7 1.7 0 0 0-1.8-1.8 3.1 3.1 0 0 0-2.3 1.3v6h-2zM111.5 20.9h2l-4.1 9.9c-1 2.3-2.2 3-3.5 3a5 5 0 0 1-1.2-.2V32a3 3 0 0 0 .9.1c1 0 1.7-.7 2.2-2l.1-.4-4.1-8.9h2.1l3 6.6zM40.7 1.5v5a4 4 0 0 1 2.8-1.2A3.4 3.4 0 0 1 47 9v5.4h-2V9.1a1.9 1.9 0 0 0-2-2 3 3 0 0 0-2.4 1.4v5.8h-2V1.5zM52.4 2.4v3.1h3.2v1.7h-3.2v4c0 1.2.6 1.6 1.7 1.6a4.7 4.7 0 0 0 1.8-.4v1.7a7.1 7.1 0 0 1-2.4.4 2.7 2.7 0 0 1-3-2.9V7.2H49V5.5h1.6V3zM58.1 14.3V5.5h1.7v1.1a4 4 0 0 1 3-1.3 3 3 0 0 1 2.7 1.4 4.3 4.3 0 0 1 3-1.4A3.2 3.2 0 0 1 72 8.8v5.5h-2V8.9A1.7 1.7 0 0 0 68 7 3 3 0 0 0 66 8.2v6.1h-2V8.9A1.7 1.7 0 0 0 62.2 7 3.1 3.1 0 0 0 60 8.4v5.9h-2zM74.7 1.5h2v12.8h-2zM15.4 0h-.1L0 1.6v28l15.3 9.1 15.3-9v-28zm13.2 28.5l-13.3 7.9-13.3-8V17l13.2 7.9v1.4l-9-5.4v1.4l9 5.4v1.5l-9-5.4v1.4l9 5.4 9.3-5.5v-5.9l4-2.4v11.6zm0-13.2l-3.7 2.1-1.7 1-8-4.7V15l6.9 4-.2.1-1 .6-5.7-3.4v1.4l4.5 2.7-1 .7-3.4-2v1.3l2.2 1.3-2.3 1.4-13.1-7.8 13.1-8zm0-1.4L15.2 6 2 14V3.3L15.3 2l13.3 1.4V14z"/>
