Правки Отступы для преимуществ вторичных элементов Вертикальное выравнивание для inline-block Для поля ввода числа людей в форме убрана высота Для внутренней страницы добавил классы изображениям-ссылкам там, где их не было

--- a/catalog.html
+++ b/catalog.html
@@ -154,7 +154,7 @@
           <li class="catalog-item">
             <article class="catalog-item-info">
               <p class="catalog-item-image paragraph-style-reset">
-                <a href="#">
+                <a class="item-image" href="#">
                   <img src="img/item-2.jpg" width="135" height="90"  alt="Desert Quail Inn">
                 </a>
               </p>
@@ -184,7 +184,7 @@
           <li class="catalog-item">
             <article class="catalog-item-info">
               <p class="catalog-item-image paragraph-style-reset">
-                <a href="#">
+                <a class="item-image" href="#">
                   <img src="img/item-3.jpg" width="135" height="90"  alt="Villas at Poco Diablo">
                 </a>
               </p>
