Правки сетки сортировки внутренней страницы

--- a/catalog.html
+++ b/catalog.html
@@ -85,37 +85,41 @@
       </form>
       <section class="search-result">
         <h2 class="visually-hidden">Сортировка результатов поиска</h2>
-        <p class="search-found paragraph-style-reset">Найдено: 3</p>
-        <p class="search-sort paragraph-style-reset">Сортировка:</p>
-        <ul class="list-style sort-type">
-          <li class="sort-selected">
-            <a href="#">По&nbsp;цене</a>
-          </li>
-          <li>
-            <a href="#">По&nbsp;типу</a>
-          </li>
-          <li>
-            <a href="#">По&nbsp;рейтингу</a>
-          </li>
-        </ul>
-        <ul class="list-style sort-order">
-          <li class="sort-order-up">
-            <a href="#">
-              <svg height="10" width="11" xmlns="http://www.w3.org/2000/svg">
-                <title>Сортировка по возрастанию</title>
-                <path d="M5.5 0L0 10h11z" fill="#cacaca"/>
-              </svg>
-            </a>
-          </li>
-          <li class="sort-order-down">
-            <a class="sort-order-selected" href="#">
-              <svg height="10" width="11" xmlns="http://www.w3.org/2000/svg">
-                <title>Сортировка по убыванию</title>
-                <path d="M5.5 10L0 0h11" fill="#cacaca"/>
-              </svg>
-            </a>
-          </li>
-        </ul>
+        <div class="search-found-wrapper">
+          <p class="search-found paragraph-style-reset">Найдено: 3</p>
+        </div>
+        <div class="search-sort-wrapper">
+          <p class="search-sort paragraph-style-reset">Сортировка:</p>
+          <ul class="list-style sort-type">
+            <li class="sort-selected">
+              <a href="#">По&nbsp;цене</a>
+            </li>
+            <li>
+              <a href="#">По&nbsp;типу</a>
+            </li>
+            <li>
+              <a href="#">По&nbsp;рейтингу</a>
+            </li>
+          </ul>
+          <ul class="list-style sort-order">
+            <li class="sort-order-up">
+              <a href="#">
+                <svg height="10" width="11" xmlns="http://www.w3.org/2000/svg">
+                  <title>Сортировка по возрастанию</title>
+                  <path d="M5.5 0L0 10h11z" fill="#cacaca"/>
+                </svg>
+              </a>
+            </li>
+            <li class="sort-order-down">
+              <a class="sort-order-selected" href="#">
+                <svg height="10" width="11" xmlns="http://www.w3.org/2000/svg">
+                  <title>Сортировка по убыванию</title>
+                  <path d="M5.5 10L0 0h11" fill="#cacaca"/>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </section>
       <section>
         <h2 class="visually-hidden">Результаты поиска</h2>
