--- a/catalog.html
+++ b/catalog.html
@@ -37,15 +37,15 @@
           <legend class="filter-header">Инфраструктура:</legend>
           <ul class="list-style options-list">
             <li>
-              <input class="visually-hidden" id="filter-pool" type="checkbox" name="pool" checked autocomplete="off">
+              <input class="visually-hidden option" id="filter-pool" type="checkbox" name="pool" checked autocomplete="off">
               <label for="filter-pool">Бассейн</label>
             </li>
             <li>
-              <input class="visually-hidden" id="filter-parking" type="checkbox" name="parking" autocomplete="off">
+              <input class="visually-hidden option" id="filter-parking" type="checkbox" name="parking" autocomplete="off">
               <label for="filter-parking">Парковка</label>
             </li>
             <li>
-              <input class="visually-hidden" id="filter-wi-fi" type="checkbox" name="wi-fi" autocomplete="off">
+              <input class="visually-hidden option" id="filter-wi-fi" type="checkbox" name="wi-fi" autocomplete="off">
               <label for="filter-wi-fi">Wi-Fi</label>
             </li>
           </ul>
@@ -54,15 +54,15 @@
           <legend class="filter-header">Тип жилья:</legend>
           <ul class="list-style options-list">
             <li>
-              <input class="visually-hidden" id="filter-hotel" type="checkbox" name="hotel" checked autocomplete="off">
+              <input class="visually-hidden option" id="filter-hotel" type="checkbox" name="hotel" checked autocomplete="off">
               <label for="filter-hotel">Гостиница</label>
             </li>
             <li>
-              <input class="visually-hidden" id="filter-motel" type="checkbox" name="motel" checked autocomplete="off">
+              <input class="visually-hidden option" id="filter-motel" type="checkbox" name="motel" checked autocomplete="off">
               <label for="filter-motel">Мотель</label>
             </li>
             <li>
-              <input class="visually-hidden" id="filter-apartments" type="checkbox" name="apartments" checked autocomplete="off">
+              <input class="visually-hidden option" id="filter-apartments" type="checkbox" name="apartments" checked autocomplete="off">
               <label for="filter-apartments">Апартаменты</label>
             </li>
           </ul>
@@ -85,9 +85,7 @@
       </form>
       <section class="search-result">
         <h2 class="visually-hidden">Сортировка результатов поиска</h2>
-        <div class="search-found-wrapper">
-          <p class="search-found paragraph-style-reset">Найдено: 3</p>
-        </div>
+        <p class="search-found paragraph-style-reset">Найдено: 3</p>
         <div class="search-sort-wrapper">
           <p class="search-sort paragraph-style-reset">Сортировка:</p>
           <ul class="list-style sort-type">
@@ -103,7 +101,7 @@
           </ul>
           <ul class="list-style sort-order">
             <li class="sort-order-up">
-              <a href="#">
+              <a class="order-button" href="#">
                 <svg height="10" width="11" xmlns="http://www.w3.org/2000/svg">
                   <title>Сортировка по возрастанию</title>
                   <path d="M5.5 0L0 10h11z" fill="#cacaca"/>
@@ -111,7 +109,7 @@
               </a>
             </li>
             <li class="sort-order-down">
-              <a class="sort-order-selected" href="#">
+              <a class="order-button sort-order-selected" href="#">
                 <svg height="10" width="11" xmlns="http://www.w3.org/2000/svg">
                   <title>Сортировка по убыванию</title>
                   <path d="M5.5 10L0 0h11" fill="#cacaca"/>
