--- a/catalog.html
+++ b/catalog.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <header class="main-header container">
+    <header class="container">
       <nav class="main-navigation">
         <a class="main-header-logo" href="index.html">
           <img src="img/logo.svg" width="140" height="72" alt="Логотип Седона">
