Убран лишний пробел из разметки

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </li>
         <li class="main-advantages">
           <div class="main-advantages-wrapper advantages-wrapper-2">
-            <h3 class="main-advantage-2">Там есть&nbsp; мост дьявола</h3>
+            <h3 class="main-advantage-2">Там есть мост дьявола</h3>
             <span>&#8470;&nbsp;2</span>
             <p class="main-advantage-2-info advantage-info paragraph-style-reset">Да, по&nbsp;нему можно пройти! Если конечно вы&nbsp;осмелитесь</p>
           </div>
