Форматирование CSS кода и убрал из html лишние классы

--- a/catalog.html
+++ b/catalog.html
@@ -38,7 +38,7 @@
             <legend class="filter-header">Инфраструктура:</legend>
             <ul class="list-style options-list">
               <li>
-                <input class="visually-hidden option" id="filter-pool" type="checkbox" name="pool" checked autocomplete="off">
+                <input class="visually-hidden option" id="filter-pool" type="checkbox" name="pool" autocomplete="off" checked>
                 <label for="filter-pool">Бассейн</label>
               </li>
               <li>
@@ -57,15 +57,15 @@
             <legend class="filter-header">Тип жилья:</legend>
             <ul class="list-style options-list">
               <li>
-                <input class="visually-hidden option" id="filter-hotel" type="checkbox" name="hotel" checked autocomplete="off">
+                <input class="visually-hidden option" id="filter-hotel" type="checkbox" name="hotel" autocomplete="off" checked>
                 <label for="filter-hotel">Гостиница</label>
               </li>
               <li>
-                <input class="visually-hidden option" id="filter-motel" type="checkbox" name="motel" checked autocomplete="off">
+                <input class="visually-hidden option" id="filter-motel" type="checkbox" name="motel" autocomplete="off" checked>
                 <label for="filter-motel">Мотель</label>
               </li>
               <li>
-                <input class="visually-hidden option" id="filter-apartments" type="checkbox" name="apartments" checked autocomplete="off">
+                <input class="visually-hidden option" id="filter-apartments" type="checkbox" name="apartments" autocomplete="off" checked>
                 <label for="filter-apartments">Апартаменты</label>
               </li>
             </ul>
