--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <p class="interest-info paragraph-style-reset">Укажите предполагаемые даты поездки,<br> и&nbsp;мы&nbsp;покажем вам лучшие предложения гостиниц в&nbsp;седоне</p>
       </div>
       <section class="modal">
-        <button class="button-modal button-brown button">Поиск гостиницы в&nbsp;Седоне</button>
+        <button class="button-modal button-brown button search-button">Поиск гостиницы в&nbsp;Седоне</button>
         <h3 class="visually-hidden">Форма поиска гостиницы</h3>
         <form class="book-form" action="https://echo.htmlacademy.ru" method="post">
           <p class="paragraph-book paragraph-style-reset">
@@ -180,7 +180,7 @@
       </p>
     </footer>
     <script>
-      var link = document.querySelector(".button-modal.button-brown");
+      var link = document.querySelector(".search-button");
 
       var popup = document.querySelector(".book-form");
 
@@ -190,8 +190,10 @@
         evt.preventDefault();
         if (popup.classList.contains("modal-show")) {
           popup.classList.remove("modal-show");
+          popup.classList.add("modal-hide");
         }else {
           popup.classList.add("modal-show");
+          popup.classList.remove("modal-hide");
         }
         focus.focus();
       });
