--- a/catalog.html
+++ b/catalog.html
@@ -4,8 +4,7 @@
     <meta charset="utf-8">
     <title>Гостиницы</title>
     <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/min.style.css">
   </head>
   <body>
     <header class="container">
