Правки для защиты проекта

--- a/catalog.html
+++ b/catalog.html
@@ -80,8 +80,8 @@
             <div class="scale">
               <div class="bar"></div>
             </div>
-            <div class="range-toggle range-toggle-min"></div>
-            <div class="range-toggle range-toggle-max"></div>
+            <button class="range-toggle range-toggle-min" type="button"></button>
+            <button class="range-toggle range-toggle-max" type="button"></button>
           </div>
           <button class="btn-transparent" type="submit">Показать</button>
         </div>
@@ -127,11 +127,9 @@
         <ul class="list-style">
           <li class="catalog-item">
             <article class="catalog-item-info">
-              <p class="catalog-item-image paragraph-style-reset">
-                <a class="item-image" href="#">
-                  <img src="img/item-1.jpg" width="135" height="90" alt="Amara Resort & Spa">
-                </a>
-              </p>
+              <a class="item-image" href="#">
+                <img src="img/item-1.jpg" width="135" height="90" alt="Amara Resort & Spa">
+              </a>
               <div class="item-info-wrapper">
                 <h3>
                   <a class="item-name link-style" href="#">Amara Resort &amp;&nbsp;Spa</a>
@@ -158,11 +156,9 @@
           </li>
           <li class="catalog-item">
             <article class="catalog-item-info">
-              <p class="catalog-item-image paragraph-style-reset">
-                <a class="item-image" href="#">
-                  <img src="img/item-2.jpg" width="135" height="90"  alt="Desert Quail Inn">
-                </a>
-              </p>
+              <a class="item-image" href="#">
+                <img src="img/item-2.jpg" width="135" height="90"  alt="Desert Quail Inn">
+              </a>
               <div class="item-info-wrapper">
                 <h3>
                   <a class="item-name link-style" href="#">Desert Quail Inn</a>
@@ -188,11 +184,9 @@
           </li>
           <li class="catalog-item">
             <article class="catalog-item-info">
-              <p class="catalog-item-image paragraph-style-reset">
-                <a class="item-image" href="#">
-                  <img src="img/item-3.jpg" width="135" height="90"  alt="Villas at Poco Diablo">
-                </a>
-              </p>
+              <a class="item-image" href="#">
+                <img src="img/item-3.jpg" width="135" height="90"  alt="Villas at Poco Diablo">
+              </a>
               <div class="item-info-wrapper">
                 <h3>
                   <a class="item-name link-style" href="#">Villas at&nbsp;Poco Diablo</a>
